--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,7 +13,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #007bff;
+  --primary: #F89F34;
   --primarr-color: #F89F34;
   --primary-color-hover: #ff8c00;
   --secondary: #6c757d;
@@ -130,11 +130,11 @@ sup {
   top: -.5em; }
 
 a {
-  color: #007bff;
+  color: #F89F34;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
-    color: #0056b3;
+    color: #ff8c00;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -2069,8 +2069,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff; }
+  background-color: #F89F34;
+  border-color: #F89F34; }
   .btn-primary:hover {
     color: #fff;
     background-color: #0069d9;
@@ -2080,8 +2080,8 @@ fieldset:disabled a.btn {
     box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff; }
+    background-color: #F89F34;
+    border-color: #F89F34; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
     color: #fff;
@@ -2268,23 +2268,23 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5); }
 
 .btn-outline-primary {
-  color: #007bff;
-  border-color: #007bff; }
+  color: #F89F34;
+  border-color: #F89F34; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff; }
+    background-color: #F89F34;
+    border-color: #F89F34; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #007bff;
+    color: #F89F34;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff; }
+    background-color: #F89F34;
+    border-color: #F89F34; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
       -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
@@ -2453,10 +2453,10 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #007bff;
+  color: #F89F34;
   text-decoration: none; }
   .btn-link:hover {
-    color: #0056b3;
+    color: #ff8c00;
     text-decoration: underline; }
   .btn-link:focus, .btn-link.focus {
     text-decoration: underline;
@@ -2697,7 +2697,7 @@ input[type="button"].btn-block {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #007bff; }
+    background-color: #F89F34; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     pointer-events: none;
@@ -3005,8 +3005,8 @@ input[type="button"].btn-block {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    border-color: #007bff;
-    background-color: #007bff; }
+    border-color: #F89F34;
+    background-color: #F89F34; }
   .custom-control-input:focus ~ .custom-control-label::before {
     -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
@@ -3053,8 +3053,8 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #007bff;
-  background-color: #007bff; }
+  border-color: #F89F34;
+  background-color: #F89F34; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e"); }
@@ -3233,7 +3233,7 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #007bff;
+    background-color: #F89F34;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -3261,7 +3261,7 @@ input[type="button"].btn-block {
   .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #007bff;
+    background-color: #F89F34;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -3292,7 +3292,7 @@ input[type="button"].btn-block {
     margin-top: 0;
     margin-right: 0.2rem;
     margin-left: 0.2rem;
-    background-color: #007bff;
+    background-color: #F89F34;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -3400,7 +3400,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #007bff; }
+  background-color: #F89F34; }
 
 .nav-fill .nav-item {
   -webkit-box-flex: 1;
@@ -3460,7 +3460,13 @@ input[type="button"].btn-block {
   white-space: nowrap; }
   .navbar-brand:hover, .navbar-brand:focus {
     text-decoration: none; }
-
+.navbar-brand img{
+  height: 20px;
+}
+@media (max-width: 575.98px) {
+  .navbar-brand img{
+    height: 15px;
+  }}
 .navbar-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -4011,12 +4017,12 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #007bff;
+  color: #F89F34;
   background-color: #fff;
   border: 1px solid #dee2e6; }
   .page-link:hover {
     z-index: 2;
-    color: #0056b3;
+    color: #ff8c00;
     text-decoration: none;
     background-color: #e9ecef;
     border-color: #dee2e6; }
@@ -4038,8 +4044,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff; }
+  background-color: #F89F34;
+  border-color: #F89F34; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4110,7 +4116,7 @@ input[type="button"].btn-block {
 
 .badge-primary {
   color: #fff;
-  background-color: #007bff; }
+  background-color: #F89F34; }
   a.badge-primary:hover, a.badge-primary:focus {
     color: #fff;
     background-color: #0062cc; }
@@ -4340,7 +4346,7 @@ input[type="button"].btn-block {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #007bff;
+  background-color: #F89F34;
   -webkit-transition: width 0.6s ease;
   -o-transition: width 0.6s ease;
   transition: width 0.6s ease; }
@@ -4422,8 +4428,8 @@ input[type="button"].btn-block {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff; }
+    background-color: #F89F34;
+    border-color: #F89F34; }
 
 .list-group-horizontal {
   -webkit-box-orient: horizontal;
@@ -5346,7 +5352,7 @@ a.close.disabled {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #007bff !important; }
+  background-color: #F89F34 !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
@@ -5446,7 +5452,7 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #007bff !important; }
+  border-color: #F89F34 !important; }
 
 .border-secondary {
   border-color: #6c757d !important; }
@@ -8638,7 +8644,7 @@ h1, h2, h3, h4, h5,
   border-bottom: 4px solid #ceb38c; }
 
 .featured {
-  padding-top: 30px;
+  padding-top: 10px;
   width: 100%; }
   @media (min-width: 992px) {
     .featured {
@@ -8856,7 +8862,7 @@ h1, h2, h3, h4, h5,
       -ms-border-radius: 5px;
       border-radius: 5px; }
       @media (max-width: 767.98px) {
-        
+
       }
     .menu .text {
       background: #fff;
@@ -9175,6 +9181,7 @@ textarea.form-control {
         width: 30px;
         display: block;
         float: left;
+        color: #c1c1c1;
         background: rgba(255, 255, 255, 0.05);
         border-radius: 50%;
         position: relative; }
@@ -9375,35 +9382,21 @@ textarea.form-control {
   display: block;
   position: relative; }
   .testimony-wrap .user-img {
-    width: 130px;
-    height: 130px;
-    border-radius: 50%;
     position: relative;
     margin: 0 auto;
+    width: 250px !important;
     background-position: top center; }
-    .testimony-wrap .user-img .quote {
-      position: absolute;
-      bottom: -10px;
-      right: 0;
-      width: 40px;
-      height: 40px;
-      background: #F89F34;
-      -webkit-border-radius: 50%;
-      -moz-border-radius: 50%;
-      -ms-border-radius: 50%;
-      border-radius: 50%; }
-      .testimony-wrap .user-img .quote i {
-        color: #fff; }
   .testimony-wrap .name {
-    font-weight: 400;
-    font-size: 22px;
+    font-weight: 600;
+    font-size: 18px;
     margin-bottom: 0;
     color: #000000; }
   .testimony-wrap .position {
-    font-size: 12px;
+    font-size: 25px;
+    color: #F89F34;
     text-transform: uppercase;
     letter-spacing: 2px;
-    font-weight: 600; }
+    font-weight: 700; }
 
 @media (max-width: 767.98px) {
   .about-image {
